# poke-damage-calculator

./: .clang-format  CMakeLists.txt  README.md  build.sh  compile_commands.json
code/: linux_pokecalc.cpp  linux_pokecalc.h  pokecalc.cpp  pokecalc.h
data/: test.out
include/: app.h  build_config.h  file_handler.h  linux_pokecalc.h  pane.h  pokecalc.h  window.h  window_manager.h
src/: CMakeLists.txt  app.cpp  curses_test.cpp  file_handler.cpp  linux_pokecalc.cpp  main.cpp  pane.cpp  pokecalc.cpp  test_color_gradient.cpp  window_manager.cpp
